--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,10 @@
     "http": "0.0.0",
     "method-override": "^2.3.6",
     "morgan": "^1.7.0",
-    "superlogin": "^0.6.1"
+    "superlogin": "^0.6.1",
+    "jsonwebtoken": "^7.1.9",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.1.0",
+    "passport-local": "^1.0.0"
   }
 }
