--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "review-king",
+  "name": "quiniela_Server",
   "version": "0.1.0",
   "description": "A sample Node.js app using Express 4",
   "engines": {
@@ -10,9 +10,10 @@
     "start": "node server.js"
   },
   "devDependencies": {
-    "mongoose": "^4.6.2",
+    "bcrypt-nodejs": "0.0.3",
+    "mongoose": "^4.6.3",
     "body-parser": "^1.15.2",
-    "cors": "^2.8.0",
+    "cors": "^2.8.1",
     "del": "2.2.0",
     "express": "^4.14.0",
     "http": "0.0.0",
@@ -23,5 +24,8 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.1.0",
     "passport-local": "^1.0.0"
+  },
+  "dependencies": {
+    "npm": "^6.0.1"
   }
 }
